@@ -1,3 +1,6 @@
+2007-09-05 Yusei
+* Added proxy role(Manager) to Assignment_updateUserSecurityGroup(assignment_workflow)
+
 2007-08-29 Yusei
 * Added new view action for module.
 
